Fix duplicate scrollbar in card view #2

--- a/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
+++ b/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
 .hover-color(@color) {
   &:hover {
     color: @color !important;
@@ -8,10 +13,6 @@ p {
   font-size: 0.75rem;
   padding: 0;
   margin: 0;
-}
-
-::ng-deep .view {
-  overflow: hidden; 
 }
 
 nz-card {
